modules/gdscript/tests/scripts/Traits/analyzer/errors/trait_typed_dictionary_invalid_assign.gd
trait SomeTrait:
	pass

class OtherClass:
	pass

func test():
	var classes: Dictionary[SomeTrait, String] = {OtherClass.new() : "A"}
